--- a/landing/css/css-index.css
+++ b/landing/css/css-index.css
@@ -750,7 +750,7 @@ a:hover {
 #contact-form h2 .highlight{
     font-weight: 500;
 }
-#contact-form input {
+#contact-form input, #contact-form button {
     position: relative;
     padding: 5px 25px;
     width: 100%;
@@ -1415,7 +1415,14 @@ and (orientation: landscape) {
 
 .navbar-btn {
     margin: calc((90px - 54px) / 2) 0;
+    float: left;
 }
+@media (max-width: 992px) {
+    .navbar-btn {
+        float: none;
+    }
+}
+
 
 .navbar-default .navbar-logo {
     margin: calc((90px - 54px) / 2) 0;
