--- a/landing/less/brands.less
+++ b/landing/less/brands.less
@@ -274,13 +274,13 @@ section{
 .icon-touch-tx{
   padding-bottom: 5px;
 }
-
 .about-list{
   display: table;
   &-item{
     display: inline-block;
     padding: 90px 0;
-    width: calc(100% / 3);
+    //width: calc(100% / 3);
+    width: 33%;
     vertical-align: middle;
     @media only screen and (min-width : 1024px){
       padding-bottom: 0;
@@ -289,7 +289,9 @@ section{
       padding: 15px;
     }
     &.item-text{
-      padding: 60px 15px;
+      //padding: 60px 15px;
+      padding-left: 30px;
+      padding-right: 30px;
       z-index: 1;
       position: relative;
       @media only screen and (min-width : 768px) and (max-width : 992px){
@@ -391,6 +393,7 @@ section{
   max-width: 670px;
   margin: 0 auto;
   overflow: hidden;
+  padding: 0 15px;
 }
 
 .btn-register{
@@ -408,6 +411,10 @@ section{
   @media (max-width: 480px) {
     padding: 15px 25px;
   }
+}
+.btn-hidden{
+  visibility: hidden !important;
+  opacity: 0;
 }
 //.btn-register .link-text,
 //.btn-register .link-icon{
